auto-start and auto user creation in dev